# simple-cut-tauri

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/core/: export.rs  filter_builder.rs  mod.rs  path.rs
src-tauri/src/media_info/: tools.rs
src-tauri/src/models/: task.rs  video.rs
src-tauri/src/services/: ffmpeg_service.rs  mod.rs  task_service.rs  video_service.rs
src/apis/: core.ts  tauriAPI.ts  types.ts
src/components/: dragAndDrop.tsx  nav.tsx
src/pages/: about.tsx  export.tsx  guide.tsx  index.tsx
src/types/: export.ts
