[package]
name = "simple-cut-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["FishCat233"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simple_cut_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1"
env_logger = "0.11.8"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
toml = "0.9.8"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
lazy_static = "1.4.0"
shlex = "1.3.0"
